@@ -1,0 +1,29 @@
+AsteroidNumber;AsteroidName;Diameter_km;Mass_10_15th_kg;RotationPeriod_hrs;OrbitalPeriod_yrs;SpectralClass;SemimajorAxis_AU;OrbitalEccentricity;OrbitalInclination_deg;AsteroidNumberAndName
+1;Ceres;975x909;947000;9.074;4.60;C;2.767;0.0789;10.58;1 Ceres
+2;Pallas;582x556x500;214000;7.813;4.61;U;2.774;0.2299;34.84;2 Pallas
+3;Juno;234;20000;7.210;4.36;S;2.669;0.2579;12.97;3 Juno
+4;Vesta;569x555x453;259000;5.342;3.63;U;2.362;0.0895;7.14;4 Vesta
+21;Lutetia;124x101x80;1700;8.168;3.80;C;2.435;0.1646;3.06;21 Lutetia
+45;Eugenia;215;6100;5.699;4.49;FC;2.721;0.0831;6.61;45 Eugenia
+140;Siwa;103;1500;18.5;4.51;C;2.734;0.2157;3.19;140 Siwa
+216;Kleopatra;217x94;;5.385;4.67;M;2.793;0.2535;13.14;216 Kleopatra
+243;Ida;58x23;100;4.633;4.84;S;2.861;0.0451;1.14;243 Ida
+253;Mathilde;66x48x46;103.3;417.7;4.31;C;2.646;0.2660;6.71;253 Mathilde
+433;Eros;33x13x13;6.69;5.270;1.76;S;1.458;0.2229;10.83;433 Eros
+951;Gaspra;19x12x11;10;7.042;3.29;S;2.209;0.1738;4.10;951 Gaspra
+1566;Icarus;1.4;0.001;2.273;1.12;U;1.078;0.8269;22.86;1566 Icarus
+1620;Geographos;2.0;0.004;5.222;1.39;S;1.245;0.3356;13.34;1620 Geographos
+1862;Apollo;1.6;0.002;3.063;1.81;S;1.471;0.5600;6.36;1862 Apollo
+2060;Chiron;180;4000;5.9;50.7;B;13.633;0.3801;6.94;2060 Chiron
+2530;Shipka;;;;5.25;;3.019;0.1237;10.10;2530 Shipka
+2703;Rodari;;;5.5;3.25;;2.194;0.0572;6.04;2703 Rodari
+2867;Steins;6.8x5.7x4.4;;6.049;3.64;E;2.364;0.1452;9.93;2867 Steins
+3352;McAuliffe;2-5;;;2.57;;1.879;0.3686;4.77;3352 McAuliffe
+3840;Mimistrobell;;;;3.38;;2.249;0.0831;3.92;3840 Mimistrobell
+4179;Toutatis;4.6x2.4x1.9;0.05;130;3.98;S;2.512;0.6339;0.47;4179 Toutatis
+4769;Castalia;1.8x0.8;0.0005;4.095;1.10;;1.063;0.4831;8.89;4769 Castalia
+4979;Otawara;5.5;0.2;2.707;3.19;;2.168;0.1449;0.91;4979 Otawara
+5535;AnneFrank;4.8;;15.12;3.29;S;2.212;0.0643;4.25;5535 AnneFrank
+9969;Braille;2.2x1.0;;226.4;3.58;B;2.341;0.4336;29.0;9969 Braille
+25143;Itokawa;0.5x0.3x0.2;0.000035;12.13;1.52;S;1.324;0.2789;1.71;25143 Itokawa
+101955;Bennu;0.25;0.00014;4.288;1.20;;1.126;0.2037;6.04;101955 Bennu
