@@ -1,0 +1,7 @@
+The AsteroidData* files are not used yet, as I could not think
+of a good way to test BOM/no BOM with the current state of the
+extension. However I have stored these files here for future
+reference.
+
+The files come from NASA data: http://nssdc.gsfc.nasa.gov/planetary/factsheet/asteroidfact.html
+and were provided by Andrew Murphy. More details at: https://forge.typo3.org/issues/54778
